--- a/tex_files/chapter-appendix.tex
+++ b/tex_files/chapter-appendix.tex
@@ -10,6 +10,58 @@ The density is given by
     f\left(k,r,p\right)=\mathcal{P}\left(X=k\right)=\begin{pmatrix} k+r-1\\r-1\end{pmatrix}\left(1-p\right)^kp^r,
 \end{equation}
 with $r$ the number of successes, $k$ the number of failures, and $p$ the probability of success \cite{haldane1941fitting}.
+\section{Distribution Fits}
+\subsection{Distribution Fits for Germany}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = 0.8\textwidth]{fit_normal_germany.svg}
+%     \caption{A normal fit to the number of cases in German municipalities}
+%     \label{fitNormalGermany}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{fit_normal_germany.png}
+    \caption{A normal fit to the number of cases in German municipalities}
+    \label{fitNormalGermany}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = 0.8\textwidth]{fit_poisson_germany.svg}
+%     \caption{A Poisson fit to the number of cases in German municipalities}
+%     \label{fitPoissonGermany}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{fit_poisson_germany.png}
+    \caption{A Poisson fit to the number of cases in German municipalities}
+    \label{fitPoissonGermany}
+\end{figure}
+\subsection{Distribution Fits for Norway}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = 0.8\textwidth]{fit_normal_norway.svg}
+%     \caption{A normal fit to the number of cases in Norwegian municipalities}
+%     \label{fitNormalNorway
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{fit_normal_norway.png}
+    \caption{A normal fit to the number of cases in Norwegian municipalities}
+    \label{fitNormalNorway}
+\end{figure}
+% \begin{figure}[H]
+%     \centering
+%     \includesvg[width = 0.8\textwidth]{fit_poisson_norway.svg}
+%     \caption{A Poisson fit to the number of cases in Norwegian municipalities}
+%     \label{fitPoissonNorway}
+% \end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{fit_poisson_norway.png}
+    \caption{A Poisson fit to the number of cases in Norwegian municipalities}
+    \label{fitPoissonNorway}
+\end{figure}
+
 
 \section{Code examples}
 \subsubsection{Specifying the Different Types of Models}
