--- a/tex_files/my-thesis.tex
+++ b/tex_files/my-thesis.tex
@@ -20,6 +20,7 @@
     resetnumbers=true,
     defernumbers=true
 ]{scrreprt}%
+\setcounter{secnumdepth}{3}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{algorithm}
