--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -641,3 +641,31 @@ outbreak in Germany},
     year = {2017},
     url = {https://doi.org/10.1371/journal.pone.0187602},
   }
+  
+  @article{stone1985additive,
+  title={Additive regression and other nonparametric models},
+  author={Stone, Charles J},
+  journal={The annals of Statistics},
+  pages={689--705},
+  year={1985},
+  publisher={JSTOR}
+}
+
+@book{cox1980point,
+  title={Point processes},
+  author={Cox, David Roxbee and Isham, Valerie},
+  volume={12},
+  year={1980},
+  publisher={CRC Press}
+}
+
+@article{lindgren2011explicit,
+  title={An explicit link between Gaussian fields and Gaussian Markov random fields: the stochastic partial differential equation approach},
+  author={Lindgren, Finn and Rue, H{\aa}vard and Lindstr{\"o}m, Johan},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={73},
+  number={4},
+  pages={423--498},
+  year={2011},
+  publisher={Wiley Online Library}
+}
